# srctag

./: Pipfile  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-release.yml  srctag-pr.yml
examples/: for_axios.py  mini.py  read.py  write.py
srctag/: __init__.py  cli.py  collector.py  model.py  storage.py  tagger.py
tests/: test_api.py  test_cli.py  test_collector.py
