[tool.poetry]
name = "srctag"
version = "0.3.1"
description = "Tag source files with real-world stories."
authors = ["williamfzc <williamfzc@foxmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "srctag" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "*"
chromadb = "0.4.14"
pydantic-settings = "*"
pydantic = "*"
tqdm = "*"
loguru = "^0.7.2"
pandas = "^2.0.3"
click = "^8.1.3"

# actually srctag still requires `sentence_transformers` here
# but pytorch is a large dep which I don't want to manage it here
sentence-transformers = { version = "^2.2.2", optional = true }

[tool.poetry.extras]
embedding = ["sentence-transformers"]


[tool.poetry.scripts]
srctag = 'srctag.cli:cli'
